--- a/src/main.css
+++ b/src/main.css
@@ -58,7 +58,7 @@ padding: 30px 25px;
 .header{
   align-items: center;
   background-color: #EFEFEF;
-  background-image: url();
+  background-image: url('hero-java-dev-program-@2x.jpg');
   background-position: cover;
   background-repeat: no-repeat;
   background-size: 100% auto;
