--- a/src/main.css
+++ b/src/main.css
@@ -13,7 +13,7 @@ margin: 0;
 padding: 0;
 font-weight: 200;
 -webkit-font-smoothing: antialiased;
--mos-osx-font-smoothing:grayscale;
+-wos-osx-font-smoothing:grayscale;
 }
 
 h1,h2,h3,h4{
